// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component Should render card-header 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <header
      class="card-header"
    >
      <p
        class="card-header-title"
      >
        Title
      </p>
      <a
        class="card-header-icon"
      >
        <i
          class="icon"
        />
      </a>
    </header>
  </div>
</DocumentFragment>
`;

exports[`Card component should render 1`] = `
<DocumentFragment>
  <div
    class="card"
  />
</DocumentFragment>
`;

exports[`Card component should render 2`] = `
<DocumentFragment>
  <div
    class="card-content"
  />
</DocumentFragment>
`;

exports[`Card component should render 3`] = `
<DocumentFragment>
  <footer
    class="card-footer"
  />
</DocumentFragment>
`;

exports[`Card component should render 4`] = `
<DocumentFragment>
  <header
    class="card-header"
  />
</DocumentFragment>
`;

exports[`Card component should render card-footer 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <footer
      class="card-footer"
    >
      <a
        class="card-footer-item"
      >
        Yes
      </a>
      <a
        class="card-footer-item"
      >
        No
      </a>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Card component should render card-image 1`] = `
<DocumentFragment>
  <div
    class="card-image"
  >
    <figure
      class="image is-4by3"
    >
      <img
        class=""
        src="http://bulma.io/images/placeholders/1280x960.png"
      />
    </figure>
  </div>
</DocumentFragment>
`;
